--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@types/cors": "2.8.12",
     "@types/express": "4.17.14",
     "@types/jsonwebtoken": "8.5.9",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
-    "eslint": "^8.27.0",
-    "husky": "^8.0.2",
-    "prettier": "^2.7.1",
-    "pretty-quick": "^3.1.3",
+    "@types/multer": "1.4.7",
+    "@typescript-eslint/eslint-plugin": "5.43.0",
+    "@typescript-eslint/parser": "5.43.0",
+    "eslint": "8.27.0",
+    "husky": "8.0.2",
+    "prettier": "2.7.1",
+    "pretty-quick": "3.1.3",
     "ts-node-dev": "2.0.0",
     "typescript": "4.8.4"
   },
@@ -31,7 +32,8 @@
     "express": "4.18.2",
     "express-async-errors": "3.1.1",
     "jsonwebtoken": "^8.5.1",
-    "prisma": "^4.6.1"
+    "multer": "1.4.5-lts.1",
+    "prisma": "4.6.1"
   },
   "husky": {
     "hooks": {
