--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
     "lint": "eslint src/**/*.ts",
-    "format": "eslint src/**/*.ts --fix"
+    "format": "eslint src/**/*.ts --fix",
+    "test": "jest -i"
   },
   "devDependencies": {
     "@types/bcryptjs": "2.4.2",
@@ -19,10 +20,14 @@
     "@typescript-eslint/parser": "5.43.0",
     "eslint": "8.27.0",
     "husky": "8.0.2",
+    "jest-mock-extended": "2.0.4",
     "prettier": "2.7.1",
     "pretty-quick": "3.1.3",
     "ts-node-dev": "2.0.0",
-    "typescript": "4.8.4"
+    "typescript": "^4.9.4",
+    "ts-jest": "29.0.3",
+    "@types/jest": "29.2.4",
+    "jest": "29.3.1"
   },
   "dependencies": {
     "@prisma/client": "4.6.1",
