--- a/.github/workflows/git.yml
+++ b/.github/workflows/git.yml
@@ -20,4 +20,4 @@ jobs:
       - name: Install dependencies
         run: yarn install
       - name: Run unit tests
-        run: yarn testg
+        run: yarn test
