--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Leonardo Philippi Degering",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts",
+    "dev": "nodemon src/server.ts",
     "lint": "eslint src/**/*.ts",
     "format": "eslint src/**/*.ts --fix",
     "test": "jest -i"
@@ -14,20 +14,22 @@
     "@types/bcryptjs": "2.4.2",
     "@types/cors": "2.8.12",
     "@types/express": "4.17.14",
+    "@types/jest": "29.2.4",
     "@types/jsonwebtoken": "8.5.9",
     "@types/multer": "1.4.7",
+    "@types/node": "18.11.18",
     "@typescript-eslint/eslint-plugin": "5.43.0",
     "@typescript-eslint/parser": "5.43.0",
     "eslint": "8.27.0",
     "husky": "8.0.2",
+    "jest": "29.0.0",
     "jest-mock-extended": "2.0.4",
+    "nodemon": "2.0.20",
     "prettier": "2.7.1",
     "pretty-quick": "3.1.3",
+    "ts-jest": "29.0.0",
     "ts-node-dev": "2.0.0",
-    "typescript": "^4.9.4",
-    "ts-jest": "29.0.3",
-    "@types/jest": "29.2.4",
-    "jest": "29.3.1"
+    "typescript": "4.9.4"
   },
   "dependencies": {
     "@prisma/client": "4.6.1",
