--- a/.github/workflows/git.yml
+++ b/.github/workflows/git.yml
@@ -19,3 +19,5 @@ jobs:
           node-version: 19.x
       - name: Install dependencies
         run: yarn install
+      - name: Run unit tests
+        run: yarn test
