--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Leonardo Philippi Degering",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/server.ts",
+    "dev": "prisma migrate dev && nodemon src/server.ts",
     "lint": "eslint src/**/*.ts",
     "format": "eslint src/**/*.ts --fix",
     "test": "jest -i"
@@ -32,7 +32,7 @@
     "typescript": "4.9.4"
   },
   "dependencies": {
-    "@prisma/client": "4.6.1",
+    "@prisma/client": "^4.8.0",
     "bcryptjs": "2.4.3",
     "cors": "2.8.5",
     "dotenv": "16.0.3",
@@ -40,7 +40,7 @@
     "express-async-errors": "3.1.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "1.4.5-lts.1",
-    "prisma": "4.6.1"
+    "prisma": "^4.8.0"
   },
   "husky": {
     "hooks": {
