--- a/.github/workflows/git.yml
+++ b/.github/workflows/git.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ master ]
 
+env:
+  DATABASE_URL: postgresql://postgres:pizza-postgres@host.docker.internal:5432/pizza-db?schema=public
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -27,7 +30,7 @@ jobs:
 
   api-test:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout
         uses: actions/checkout@v1
