--- a/.github/workflows/git.yml
+++ b/.github/workflows/git.yml
@@ -7,7 +7,8 @@ on:
     branches: [ master ]
 
 env:
-  DATABASE_URL: postgresql://postgres:pizza-postgres@host.docker.internal:5432/pizza-db?schema=public
+  DATABASE_URL: postgresql://postgres:pizza-postgres@pizza-db:5432/pizza-db?schema=public
+  BASE_URI: http://pizza-api:3333
 
 jobs:
   build:
@@ -27,6 +28,7 @@ jobs:
 
       - name: Run unit tests
         run: yarn test
+        
 
   api-test:
     runs-on: ubuntu-latest
