--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,9 @@ services:
       - postgres
     ports:
       - "3333:3333"
+    environment:
+      - DATABASE_URL=postgresql://postgres:pizza-postgres@pizza-db:5432/pizza-db?schema=public
+      - BASE_URI=http://pizza-api:3333
 
   test:
     container_name: pizza-test
