--- a/.github/workflows/git.yml
+++ b/.github/workflows/git.yml
@@ -33,6 +33,8 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Run api tests on docker environment
+        env:
+          DATABASE_URL: postgresql://postgres:pizza-postgres@pizza-db:5432/pizza-db?schema=public
         run: docker-compose up --exit-code-from test
 
     
