trying set env 10

--- a/.github/workflows/git.yml
+++ b/.github/workflows/git.yml
@@ -32,10 +32,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
 
+      - name: ENV VARIABLE
+        run: echo "--------- env.DATABASE_URL ---------"
+
       - name: Run api tests on docker environment
         env:
           DATABASE_URL: ${{ env.DATABASE_URL }}
-        run: echo "--------- env.DATABASE_URL ---------"
         run: docker-compose up --exit-code-from test
 
     
