--- a/.github/workflows/git.yml
+++ b/.github/workflows/git.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ master ]
 
+env:
+  DATABASE_URL: '${{ vars.DATABASE_URL }}'
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -32,12 +35,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
 
-      - name: ENV VARIABLE
-        run: echo "--------- ${{ vars.DATABASE_URL }} ---------"
-
       - name: Run api tests on docker environment
-        env:
-          DATABASE_URL: ${{ vars.DATABASE_URL }}
-        run: docker-compose up --exit-code-from test
+        run: docker-compose up -e DATABASE_URL=$DATABASE_URL --exit-code-from test
 
     
