--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,8 @@ services:
       - postgres
     ports:
       - "3333:3333"
-    environment:
-      - DATABASE_URL=$DATABASE_URL
+    # environment:
+    #   - DATABASE_URL=$DATABASE_URL
 
   test:
     container_name: pizza-test
