--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -4,13 +4,10 @@ WORKDIR /app
 RUN git clone https://github.com/LeonardoPhildeg/pizza-backend-test.git
 
 
-
-# FROM alpine as wait
-# CMD /wait
-
-
-
 FROM maven:3.6-openjdk-17-slim as build
+
+ENV DB_HOST=host.docker.internal:5432
+ENV BASE_URI=http://host.docker.internal:3333
 
 WORKDIR /app
 COPY --from=clone /app/pizza-backend-test /app
@@ -19,7 +16,6 @@ RUN mvn -f /app/pom.xml clean install -DskipTests
 ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.9.0/wait /wait
 RUN chmod +x /wait
 
-# CMD [ "mvn", "test" ]
 CMD /wait && mvn test
 
 VOLUME /app/target
